// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameViewComponent Should match snapshot - when data is loading 1`] = `
<app-game-view
  cdr={[Function ViewRef$1]}
  currentPeople$={[Function _Store]}
  error$={[Function _Store]}
  form={[Function FormGroup]}
  loading$={[Function _Store]}
  store={[Function _MockStore]}
  winnerIndex$={[Function Subject]}
>
  <div
    class="container my-3 d-flex flex-column justify-content-center align-items-center"
  >
    <h1
      class="mb-3"
    >
      Swapi Game
    </h1>
    <app-game-options>
      <mat-form-field
        class="mat-mdc-form-field mat-mdc-form-field-type-mat-select mat-form-field-no-animations mat-form-field-appearance-fill mat-form-field-hide-placeholder mat-primary ng-untouched ng-pristine ng-invalid"
      >
        <div
          class="mat-mdc-text-field-wrapper mdc-text-field mdc-text-field--filled"
        >
          <div
            class="mat-mdc-form-field-focus-overlay"
          />
          <div
            class="mat-mdc-form-field-flex"
          >
            <div
              class="mat-mdc-form-field-infix"
            >
              <label
                class="mdc-floating-label mat-mdc-floating-label"
                matformfieldfloatinglabel=""
              >
                <mat-label>
                  Choose property
                </mat-label>
                <span
                  aria-hidden="true"
                  class="mat-mdc-form-field-required-marker mdc-floating-label--required"
                />
              </label>
              <mat-select
                aria-autocomplete="none"
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-invalid="false"
                aria-required="true"
                class="mat-mdc-select mat-mdc-select-required mat-mdc-select-empty ng-untouched ng-pristine ng-invalid"
                data-cy="choose-property-select"
                ngskiphydration=""
                role="combobox"
                tabindex="0"
              >
                <div
                  cdk-overlay-origin=""
                  class="mat-mdc-select-trigger"
                >
                  <div
                    class="mat-mdc-select-value"
                  >
                    <span
                      class="mat-mdc-select-placeholder mat-mdc-select-min-line"
                    >
                    </span>
                  </div>
                  <div
                    class="mat-mdc-select-arrow-wrapper"
                  >
                    <div
                      class="mat-mdc-select-arrow"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24px"
                        viewBox="0 0 24 24"
                        width="24px"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </mat-select>
            </div>
          </div>
          <div
            class="mdc-line-ripple mdc-line-ripple--deactivating"
            matformfieldlineripple=""
          />
        </div>
        <div
          class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align"
        >
          <div
            class="mat-mdc-form-field-hint-wrapper ng-trigger ng-trigger-transitionMessages"
            style="opacity: 1; transform: translateY(0%);"
          >
            <div
              class="mat-mdc-form-field-hint-spacer"
            />
          </div>
        </div>
      </mat-form-field>
    </app-game-options>
    <button
      class="btn btn-primary w-25 mb-3 d-block"
      data-cy="start-play-button"
      disabled=""
    >
       Play! 
    </button>
    <div
      class="col-12"
    >
      <app-game-counter>
        <div
          class="row"
        >
          <div
            class="col-6 text-center"
          >
            <h4>
              Player 1
            </h4>
            <p
              data-cy="counter-result"
            >
              Result: 0
            </p>
          </div>
          <div
            class="col-6 text-center"
          >
            <h4>
              Player 2
            </h4>
            <p
              data-cy="counter-result"
            >
              Result: 0
            </p>
          </div>
        </div>
      </app-game-counter>
    </div>
    <app-loader>
      <div
        class="text-center"
      >
        <div
          class="spinner-border text-primary"
          role="status"
        >
          <span
            class="visually-hidden"
          >
            Loading...
          </span>
        </div>
      </div>
    </app-loader>
  </div>
</app-game-view>
`;

exports[`GameViewComponent Should match snapshot - when errors occured 1`] = `
<app-game-view
  cdr={[Function ViewRef$1]}
  currentPeople$={[Function _Store]}
  error$={[Function _Store]}
  form={[Function FormGroup]}
  loading$={[Function _Store]}
  store={[Function _MockStore]}
  winnerIndex$={[Function Subject]}
>
  <app-error-message>
    <div
      class="alert alert-danger mb-2"
      role="alert"
    >
       error
    </div>
  </app-error-message><div
    class="container my-3 d-flex flex-column justify-content-center align-items-center"
  >
    <h1
      class="mb-3"
    >
      Swapi Game
    </h1>
    <app-game-options>
      <mat-form-field
        class="mat-mdc-form-field mat-mdc-form-field-type-mat-select mat-form-field-no-animations mat-form-field-appearance-fill mat-form-field-hide-placeholder mat-primary ng-untouched ng-pristine ng-invalid"
      >
        <div
          class="mat-mdc-text-field-wrapper mdc-text-field mdc-text-field--filled"
        >
          <div
            class="mat-mdc-form-field-focus-overlay"
          />
          <div
            class="mat-mdc-form-field-flex"
          >
            <div
              class="mat-mdc-form-field-infix"
            >
              <label
                class="mdc-floating-label mat-mdc-floating-label"
                matformfieldfloatinglabel=""
              >
                <mat-label>
                  Choose property
                </mat-label>
                <span
                  aria-hidden="true"
                  class="mat-mdc-form-field-required-marker mdc-floating-label--required"
                />
              </label>
              <mat-select
                aria-autocomplete="none"
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-invalid="false"
                aria-required="true"
                class="mat-mdc-select mat-mdc-select-required mat-mdc-select-empty ng-untouched ng-pristine ng-invalid"
                data-cy="choose-property-select"
                ngskiphydration=""
                role="combobox"
                tabindex="0"
              >
                <div
                  cdk-overlay-origin=""
                  class="mat-mdc-select-trigger"
                >
                  <div
                    class="mat-mdc-select-value"
                  >
                    <span
                      class="mat-mdc-select-placeholder mat-mdc-select-min-line"
                    >
                    </span>
                  </div>
                  <div
                    class="mat-mdc-select-arrow-wrapper"
                  >
                    <div
                      class="mat-mdc-select-arrow"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24px"
                        viewBox="0 0 24 24"
                        width="24px"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </mat-select>
            </div>
          </div>
          <div
            class="mdc-line-ripple mdc-line-ripple--deactivating"
            matformfieldlineripple=""
          />
        </div>
        <div
          class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align"
        >
          <div
            class="mat-mdc-form-field-hint-wrapper ng-trigger ng-trigger-transitionMessages"
            style="opacity: 1; transform: translateY(0%);"
          >
            <div
              class="mat-mdc-form-field-hint-spacer"
            />
          </div>
        </div>
      </mat-form-field>
    </app-game-options>
    <button
      class="btn btn-primary w-25 mb-3 d-block"
      data-cy="start-play-button"
      disabled=""
    >
       Play! 
    </button>
    <div
      class="col-12"
    >
      <app-game-counter>
        <div
          class="row"
        >
          <div
            class="col-6 text-center"
          >
            <h4>
              Player 1
            </h4>
            <p
              data-cy="counter-result"
            >
              Result: 0
            </p>
          </div>
          <div
            class="col-6 text-center"
          >
            <h4>
              Player 2
            </h4>
            <p
              data-cy="counter-result"
            >
              Result: 0
            </p>
          </div>
        </div>
      </app-game-counter>
    </div>
    <div
      class="row w-100"
    >
      <div
        class="col-12 col-md-6 mb-3"
      >
        <app-game-card>
          <mat-card
            class="mat-mdc-card mdc-card game-card"
            data-cy="game-card"
          >
            <mat-card-content
              class="mat-mdc-card-content d-flex flex-column justify-content-center align-items-center w-100 h-100"
            >
              <h3>
                Darth Vader
              </h3>
              <app-icon>
                <svg
                  height="200"
                  width="200"
                >
                  <use
                    xlink:href="assets/icons/icons.svg#person1"
                  />
                </svg>
              </app-icon>
              <div
                class="mt-4"
              >
                <p>
                  Gender male
                </p>
                <p>
                  Mass: 100
                </p>
                <p>
                  Height: 100
                </p>
                <p>
                  Birth year: 2002
                </p>
                <p>
                  Eye color: blue
                </p>
                <p>
                  Skin color: white
                </p>
                <p>
                  Hair color: gray
                </p>
              </div>
            </mat-card-content>
          </mat-card>
        </app-game-card>
      </div>
      <div
        class="col-12 col-md-6 mb-3"
      >
        <app-game-card>
          <mat-card
            class="mat-mdc-card mdc-card game-card"
            data-cy="game-card"
          >
            <mat-card-content
              class="mat-mdc-card-content d-flex flex-column justify-content-center align-items-center w-100 h-100"
            >
              <h3>
                Yoda
              </h3>
              <app-icon>
                <svg
                  height="200"
                  width="200"
                >
                  <use
                    xlink:href="assets/icons/icons.svg#person2"
                  />
                </svg>
              </app-icon>
              <div
                class="mt-4"
              >
                <p>
                  Gender male
                </p>
                <p>
                  Mass: 100
                </p>
                <p>
                  Height: 100
                </p>
                <p>
                  Birth year: 2002
                </p>
                <p>
                  Eye color: blue
                </p>
                <p>
                  Skin color: white
                </p>
                <p>
                  Hair color: gray
                </p>
              </div>
            </mat-card-content>
          </mat-card>
        </app-game-card>
      </div>
    </div>
  </div>
</app-game-view>
`;

exports[`GameViewComponent Should match snapshot - when full data is loaded 1`] = `
<app-game-view
  cdr={[Function ViewRef$1]}
  currentPeople$={[Function _Store]}
  error$={[Function _Store]}
  form={[Function FormGroup]}
  loading$={[Function _Store]}
  store={[Function _MockStore]}
  winnerIndex$={[Function Subject]}
>
  <div
    class="container my-3 d-flex flex-column justify-content-center align-items-center"
  >
    <h1
      class="mb-3"
    >
      Swapi Game
    </h1>
    <app-game-options>
      <mat-form-field
        class="mat-mdc-form-field mat-mdc-form-field-type-mat-select mat-form-field-no-animations mat-form-field-appearance-fill mat-form-field-hide-placeholder mat-primary ng-untouched ng-pristine ng-invalid"
      >
        <div
          class="mat-mdc-text-field-wrapper mdc-text-field mdc-text-field--filled"
        >
          <div
            class="mat-mdc-form-field-focus-overlay"
          />
          <div
            class="mat-mdc-form-field-flex"
          >
            <div
              class="mat-mdc-form-field-infix"
            >
              <label
                class="mdc-floating-label mat-mdc-floating-label"
                matformfieldfloatinglabel=""
              >
                <mat-label>
                  Choose property
                </mat-label>
                <span
                  aria-hidden="true"
                  class="mat-mdc-form-field-required-marker mdc-floating-label--required"
                />
              </label>
              <mat-select
                aria-autocomplete="none"
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-invalid="false"
                aria-required="true"
                class="mat-mdc-select mat-mdc-select-required mat-mdc-select-empty ng-untouched ng-pristine ng-invalid"
                data-cy="choose-property-select"
                ngskiphydration=""
                role="combobox"
                tabindex="0"
              >
                <div
                  cdk-overlay-origin=""
                  class="mat-mdc-select-trigger"
                >
                  <div
                    class="mat-mdc-select-value"
                  >
                    <span
                      class="mat-mdc-select-placeholder mat-mdc-select-min-line"
                    >
                    </span>
                  </div>
                  <div
                    class="mat-mdc-select-arrow-wrapper"
                  >
                    <div
                      class="mat-mdc-select-arrow"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24px"
                        viewBox="0 0 24 24"
                        width="24px"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </mat-select>
            </div>
          </div>
          <div
            class="mdc-line-ripple mdc-line-ripple--deactivating"
            matformfieldlineripple=""
          />
        </div>
        <div
          class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align"
        >
          <div
            class="mat-mdc-form-field-hint-wrapper ng-trigger ng-trigger-transitionMessages"
            style="opacity: 1; transform: translateY(0%);"
          >
            <div
              class="mat-mdc-form-field-hint-spacer"
            />
          </div>
        </div>
      </mat-form-field>
    </app-game-options>
    <button
      class="btn btn-primary w-25 mb-3 d-block"
      data-cy="start-play-button"
      disabled=""
    >
       Play! 
    </button>
    <div
      class="col-12"
    >
      <app-game-counter>
        <div
          class="row"
        >
          <div
            class="col-6 text-center"
          >
            <h4>
              Player 1
            </h4>
            <p
              data-cy="counter-result"
            >
              Result: 0
            </p>
          </div>
          <div
            class="col-6 text-center"
          >
            <h4>
              Player 2
            </h4>
            <p
              data-cy="counter-result"
            >
              Result: 0
            </p>
          </div>
        </div>
      </app-game-counter>
    </div>
    <div
      class="row w-100"
    >
      <div
        class="col-12 col-md-6 mb-3"
      >
        <app-game-card>
          <mat-card
            class="mat-mdc-card mdc-card game-card"
            data-cy="game-card"
          >
            <mat-card-content
              class="mat-mdc-card-content d-flex flex-column justify-content-center align-items-center w-100 h-100"
            >
              <h3>
                Darth Vader
              </h3>
              <app-icon>
                <svg
                  height="200"
                  width="200"
                >
                  <use
                    xlink:href="assets/icons/icons.svg#person1"
                  />
                </svg>
              </app-icon>
              <div
                class="mt-4"
              >
                <p>
                  Gender male
                </p>
                <p>
                  Mass: 100
                </p>
                <p>
                  Height: 100
                </p>
                <p>
                  Birth year: 2002
                </p>
                <p>
                  Eye color: blue
                </p>
                <p>
                  Skin color: white
                </p>
                <p>
                  Hair color: gray
                </p>
              </div>
            </mat-card-content>
          </mat-card>
        </app-game-card>
      </div>
      <div
        class="col-12 col-md-6 mb-3"
      >
        <app-game-card>
          <mat-card
            class="mat-mdc-card mdc-card game-card"
            data-cy="game-card"
          >
            <mat-card-content
              class="mat-mdc-card-content d-flex flex-column justify-content-center align-items-center w-100 h-100"
            >
              <h3>
                Yoda
              </h3>
              <app-icon>
                <svg
                  height="200"
                  width="200"
                >
                  <use
                    xlink:href="assets/icons/icons.svg#person2"
                  />
                </svg>
              </app-icon>
              <div
                class="mt-4"
              >
                <p>
                  Gender male
                </p>
                <p>
                  Mass: 100
                </p>
                <p>
                  Height: 100
                </p>
                <p>
                  Birth year: 2002
                </p>
                <p>
                  Eye color: blue
                </p>
                <p>
                  Skin color: white
                </p>
                <p>
                  Hair color: gray
                </p>
              </div>
            </mat-card-content>
          </mat-card>
        </app-game-card>
      </div>
    </div>
  </div>
</app-game-view>
`;
